--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </center>
                 </a>
                 <p>
-                    Representative manuscript images from South Asian Palm Leaf Manuscripts 
+                    Representative manuscript images from Indiscapes2 Dataset .
                     <ul>
                         <li>
                             <b>ASR</b> (top left, pink dotted line)
@@ -260,9 +260,9 @@
                     </ul>
                     Note the diversity across collections in terms of document quality, region density, aspect ratio and non-textual elements (pictures).
                 </p>
-                <center>
+                <!-- <center>
                     <img src="./assets/sf/Results_Table.png" alt="Results_I2_BKS_KG" style="width:50%" />
-                </center>
+                </center> -->
             </div>
 
             <!--=================Materials==========================-->
@@ -294,6 +294,7 @@
                 <!--=================*******==========================-->
                 <div id="vid4" class="img_container">
                     TBD -- Need to add more imgs.
+
                     Text Line predictions by SeamFormer on representative test set documents from Indiscapes2 datasets , Balineese , Khmer and Sundaneese datasets.
                     <br />
                     <br />
