Few minor edits
Website finalisation

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h2>Highlights</h2>
                 <ol>                  
                     <li>
-                        Historical South Asian palm leaf manuscripts are challenging to segment text lines from due to dense, unstructured text lines, high aspect ratio, and complex diacritic elements.
+                        Segmenting text lines in historical manuscripts is challenging due to dense, unstructured text lines, high aspect ratio, and complex diacritic elements.
                     </li>
                     <li>
                         SeamFormer is a novel approach for high precision text line segmentation in handwritten manuscripts. It addresses the challenges of dense unstructured text lines by using a two-stage approach: a multi-task Transformer deep network outputs coarse line identifiers and a scribble-conditioned seam generation procedure generates tight-fitting line segmentation polygons. 
@@ -200,15 +200,6 @@
                 </div>
                 <br />
                 <h4>SeamFormer In Action !  </h3>
-                <div class="section">
-                    <center>
-                        <div class="vid-border">
-                        <video id="my_video_2" class="video-js vjs-default-skin" controls poster="./assets/sf/test.pngS" preload="none" data-setup='{ "aspectRatio":"1920:1080", "playbackRates": [1, 1.5, 2] }'>
-                                <source src="./assets/sf/seam_generation_ASR.mp4" type='video/mp4' />
-                        </video>
-                        </div>
-                    </center>
-                </div>
             </div>
             <!--=================Dataset==========================-->
             <div class="section" ,=, id="dataset">
@@ -293,8 +284,6 @@
                 <h2>Qualitative Results</h2>
                 <!--=================*******==========================-->
                 <div id="vid4" class="img_container">
-                    TBD -- Need to add more imgs.
-
                     Text Line predictions by SeamFormer on representative test set documents from Indiscapes2 datasets , Balineese , Khmer and Sundaneese datasets.
                     <br />
                     <br />
